--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@ HTML('''
             font-size: 36px;
             text-align: center;
             margin-bottom: 10px;
-            background: linear-gradient(135deg, #F7DC6F, #56CCF2); /* Updated: Yellow and Light Blue */
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #1a202c; /* Updated for better visibility: Solid dark color */
         }
 
         .subtitle {
@@ -124,7 +121,7 @@ HTML('''
         .player-number {
             font-size: 48px;
             font-weight: bold;
-            color: #56CCF2; /* Retained light blue for player number */
+            color: #1a202c; /* Updated for better visibility */
             margin-bottom: 20px;
         }
 
@@ -257,7 +254,7 @@ HTML('''
             text-align: center;
             font-size: 24px;
             font-weight: bold;
-            color: #56CCF2;
+            color: #1a202c; /* Updated for better visibility */
             margin-bottom: 20px;
         }
 
@@ -296,7 +293,7 @@ HTML('''
                     <option value="6">6 Players</option>
                     <option value="7">7 Players</option>
                     <option value="8">8 Players</option>
-                    <option value="9">9 Players</option>
+                    <option value="9">9 Players</n>
                     <option value="10">10 Players</option>
                 </select>
 
