--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-from IPython.display import HTML
-HTML('''
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1427,4 +1426,4 @@ HTML('''
         });
     </script>
 </body>
-</html>''')
+</html>
